--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
+    "chart.js": "^2.7.2",
     "core-js": "2.5.3",
     "express": "4.16.2",
     "rxjs": "5.5.6",
@@ -73,6 +74,6 @@
     "typedoc": "0.9.0",
     "typescript": "2.5.3",
     "@osisoft/piwebapi": "2.1.0-rc.1",
-    "tslib": "^1.9.0"   
+    "tslib": "^1.9.0"
   }
 }
