Covariance matrix plus eigenvectors & eigenvalues

--- a/package.json
+++ b/package.json
@@ -35,10 +35,16 @@
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
+    "@types/mathjs": "0.0.39",
     "chart.js": "^2.7.2",
+    "compute-covariance": "^1.0.1",
     "core-js": "2.5.3",
     "express": "4.16.2",
+    "mathjs": "^4.0.1",
+    "node-matrix": "^1.0.0",
+    "numeric": "^1.2.6",
     "rxjs": "5.5.6",
+    "transpose-matrix": "^1.2.0",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
